Stripe seller sccount creation and sidebar for seller ui
