# apps/auth-service/src/routes/auth.router.ts
@@ -1,6 +1,7 @@
 import express, { Router } from "express";
-import { createShop, getUser, loginUser, refreshToken, registerSeller, resetUserPassword, userForgotPassword, userRegistration, verifySeller, verifyUser, verifyUserForgotPasswordOtp } from "../controller/auth.controller";
+import { createShop, createStripeConnectLink, getSeller, getUser, loginSeller, loginUser, refreshToken, registerSeller, resetUserPassword, userForgotPassword, userRegistration, verifySeller, verifyUser, verifyUserForgotPasswordOtp } from "../controller/auth.controller";
 import isAuthenticated from "@packages/middleware/isAuthenticated";
+import { isSeller } from "@packages/middleware/authorizeRoles";
 
 
 const router:Router = express.Router();
@@ -8,7 +9,7 @@ const router:Router = express.Router();
 router.post("/user-registration",userRegistration);
 router.post("/verify-user",verifyUser);
 router.post("/login-user",loginUser);
-router.post("/refresh-token-user",refreshToken);
+router.post("/refresh-token",refreshToken);
 router.get("/logged-in-user",isAuthenticated,getUser);
 router.post("/forgot-password-user",userForgotPassword);
 router.post("/reset-password-user",resetUserPassword);
@@ -16,5 +17,8 @@ router.post("/verify-forgot-password-user",verifyUserForgotPasswordOtp);
 router.post("/seller-registration",registerSeller);
 router.post("/verify-seller",verifySeller);
 router.post("/create-shop",createShop);
+router.post("/create-stripe-link",createStripeConnectLink);
+router.post("/login-seller",loginSeller);
+router.get("/logged-in-seller",isAuthenticated,isSeller,getSeller);
 
 export default router;
